# Clock

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE.ru.md  CMakeLists.txt  INSTRUCTION.md  MENU.md  PROBLEMS.md  README.md  WIRING.md  partitions.csv  sdkconfig
.github/workflows/: esp-idf-build.yml
main/: CMakeLists.txt  todo.txt
main/app/: alarm_actions.c  alarm_actions.h  alarm_playback.c  alarm_playback.h  app_control.h  app_main.c  ui_display_task.c  ui_display_task.h  ui_input.c  ui_input.h  ui_input_handlers.c  ui_input_handlers.h  ui_menu.c  ui_menu.h  ui_mode_manager.c  ui_mode_manager.h  ui_time_setting.c  ui_time_setting.h
main/audio/: alarm_sound.c  alarm_sound.h  alarm_tone.c  alarm_tone.h  audio_eq.c  audio_eq.h  audio_owner.c  audio_owner.h  audio_pcm5102.c  audio_pcm5102.h  audio_player.c  audio_player.h  audio_spectrum.c  audio_spectrum.h  audio_tones.c  audio_tones.h  helix_mp3_wrapper.c  helix_shim.c
main/board/: board_pins.h
main/clock/: alarm_timer.c  alarm_timer.h  clock_time.c  clock_time.h
main/config/: config_owner.c  config_owner.h  config_store.c  config_store.h
main/connectivity/: bluetooth_sink.c  bluetooth_sink.h  bt_app_av.c  bt_app_av.h  bt_app_core.c  bt_app_core.h  bt_avrc.c  bt_avrc.h  web_config.c  web_config.h  wifi_ntp.c  wifi_ntp.h
main/display/: display_74hc595.c  display_74hc595.h  display_bt_anim.c  display_bt_anim.h  display_ui.c  display_ui.h
main/input/: adc_keys.c  adc_keys.h  buttons.c  buttons.h  encoder.c  encoder.h
main/led/: led_indicator.c  led_indicator.h  led_strip_encoder.c  led_strip_encoder.h
main/power/: power_manager.c  power_manager.h
main/radio/: radio_rda5807.c  radio_rda5807.h
main/storage/: storage_sd_spi.c  storage_sd_spi.h
